--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FP - SINAIS SLOTS - PP GAMES (Completo)</title>
+    <title>FP - SINAIS SLOTS - PP GAMES</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Estilos globais e de corpo */
         :root {
@@ -29,7 +30,7 @@
         body {
             background-color: var(--bg-dark);
             color: var(--text-light);
-            padding-top: 60px; /* Menor espaço para a navbar fixa */
+            padding-top: 60px; /* Espaço para a navbar fixa */
         }
 
         .container {
@@ -59,8 +60,8 @@
 
         .nav-buttons {
             display: flex;
-            gap: 5px; /* Menor gap para caber tudo */
-            flex-wrap: wrap; /* Permite quebras em telas menores */
+            gap: 5px; 
+            flex-wrap: wrap; 
             padding: 5px 0;
         }
 
@@ -74,7 +75,7 @@
             background-color: #333;
             border: 1px solid var(--primary-purple);
             transition: transform 0.2s, box-shadow 0.2s;
-            white-space: nowrap; /* Impede quebras de linha nos botões */
+            white-space: nowrap; 
         }
 
         .btn-action {
@@ -160,7 +161,7 @@
             display: flex;
             justify-content: center;
             gap: 15px;
-            margin: 30px 0 15px 0; /* Espaço ajustado */
+            margin: 30px 0 15px 0; 
         }
 
         .tab-button {
@@ -197,7 +198,7 @@
 
         .search-input {
             width: 100%;
-            padding: 10px 20px 10px 45px; /* Padding ajustado para a lupa */
+            padding: 10px 20px 10px 45px; 
             border: 4px solid var(--primary-purple);
             border-radius: 8px;
             background: linear-gradient(to left, #c7c9ce, #cfd2da, #e2e4e8);
@@ -216,7 +217,7 @@
             font-size: 1.2em;
         }
         
-        /* Estilos dos Cartões (Mantidos e Simplificados) */
+        /* Estilos dos Cartões */
         .cards-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); 
@@ -237,10 +238,6 @@
             position: relative;
             transition: transform 0.2s;
             border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .game-card:hover {
-            transform: scale(1.02);
         }
 
         .card-top {
@@ -344,24 +341,19 @@
             margin-top: 15px;
             transition: opacity 0.2s;
         }
-
-        .btn-jogue-agora-span:hover {
-            opacity: 0.9;
-        }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
     <nav class="navbar">
         <div class="container navbar-content">
             <div class="nav-buttons">
-                <a href="#" class="nav-link"><i class="fas fa-gem" style="color: yellow;"></i> JOGOS PG</a>
-                <a href="#" class="nav-link" style="border-color: var(--text-gold);"><i class="fas fa-crown" style="color: var(--text-gold);"></i> JOGOS PP</a>
-                <a href="#" class="nav-link"><i class="fas fa-brain" style="color: red;"></i> GERAR SINAIS</a>
-                <a href="#" class="nav-link btn-action" style="background-color: #008000; border-color: #00ff00;">JOGUE AGORA</a>
-                <a href="#" class="nav-link"><i class="fas fa-dice" style="color: white;"></i> WG GAMES</a>
-                <a href="#" class="nav-link"><i class="fas fa-star" style="color: yellow;"></i> TADA GAMING</a>
+                <a href="pg-games.html" class="nav-link"><i class="fas fa-gem" style="color: yellow;"></i> JOGOS PG</a>
+                <a href="index.html" class="nav-link" style="border-color: var(--text-gold);"><i class="fas fa-crown" style="color: var(--text-gold);"></i> JOGOS PP</a>
+                <a href="gerar-sinais.html" class="nav-link"><i class="fas fa-brain" style="color: red;"></i> GERAR SINAIS</a>
+                <a href="https://www.aquelepg.com/?id=246003088" target="_blank" class="nav-link btn-action" style="background-color: #008000; border-color: #00ff00;">JOGUE AGORA</a>
+                <a href="wg-games.html" class="nav-link"><i class="fas fa-dice" style="color: white;"></i> WG GAMES</a>
+                <a href="tada-games.html" class="nav-link"><i class="fas fa-star" style="color: yellow;"></i> TADA GAMING</a>
                 <a href="#" class="nav-link btn-action">BAIXAR APP</a>
             </div>
         </div>
@@ -418,7 +410,7 @@
         const DEFAULT_GAME_LINK = "https://www.aquelepg.com/?id=246003088";
 
         const gamesData = [
-            // Dados dos 33 jogos (MANTIDOS do código anterior)
+            // DADOS DOS JOGOS PP (MANTIDOS)
             { nome: "Treasure Wild", distribuicao: 79, minima: 78, padrao: 25, maxima: 73, cor: "bg-orange" },
             { nome: "Starlight Princess", distribuicao: 61, minima: 58, padrao: 49, maxima: 13, cor: "bg-yellow" },
             { nome: "Buffalo King Untamed Megaways", distribuicao: 63, minima: 60, padrao: 56, maxima: 27, cor: "bg-purple" },
