--- a/pg-games.html
+++ b/pg-games.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FP - SINAIS SLOTS - PG GAMES</title>
+    <title>CASAL VIP - SINAIS SLOTS - PG GAMES</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -373,9 +373,9 @@
         <div class="banner-car"></div>
         <div class="banner-content">
             <div style="position: relative; z-index: 5;">
-                <span class="banner-logo">FP <i class="fas fa-gem" style="color: yellow;"></i> GRUPO</span>
+                <span class="banner-logo">CASAL VIP <i class="fas fa-gem" style="color: yellow;"></i> GRUPO</span>
                 <p class="pg-games-text">PG GAMES</p>
-                <p style="color: white; margin-top: -10px; font-weight: 700;">www.grupofpsinais.com.br</p>
+                <p style="color: white; margin-top: -10px; font-weight: 700;">www.conexao-segura.github.io/grupocasalvipsinais</p>
 
                 <div class="download-links">
                     <p style="font-size: 0.9em; margin-bottom: 5px;">Faça o Download do nosso Aplicativo via:</p>
@@ -411,10 +411,10 @@
     <footer class="footer" style="background-color: #000; padding: 40px 0;">
         <div class="container" style="max-width: 900px; text-align: left;">
             <h1 style="color: var(--green-text); font-size: 1.5em; margin-bottom: 10px;">DEFENSORES DO JOGO RESPONSÁVEL</h1>
-            <p style="font-size: 0.9em; line-height: 1.5;">Nós do Grupo FP, promovemos o jogo responsável como uma forma de entretenimento. Se o jogo deixar de ser divertido, é hora de parar. O jogo é destinado a maiores de 18 anos – é ilegal para menores.</p>
+            <p style="font-size: 0.9em; line-height: 1.5;">Nós do Grupo Casal Vip, promovemos o jogo responsável como uma forma de entretenimento. Se o jogo deixar de ser divertido, é hora de parar. O jogo é destinado a maiores de 18 anos – é ilegal para menores.</p>
             
             <h1 style="color: var(--green-text); font-size: 1.5em; margin-top: 30px; margin-bottom: 10px;">AVISO LEGAL</h1>
-            <p style="font-size: 0.9em; line-height: 1.5;">O site grupofpsinais.net é uma plataforma independente dedicada a cassinos online e jogos de cassino. Fornecemos análises detalhadas e imparciais, mas recomendamos sempre verificar as regulamentações locais antes de participar de qualquer atividade de jogo.</p>
+            <p style="font-size: 0.9em; line-height: 1.5;">O site conexao-segura.github.io/grupocasalvipsinais é uma plataforma independente dedicada a cassinos online e jogos de cassino. Fornecemos análises detalhadas e imparciais, mas recomendamos sempre verificar as regulamentações locais antes de participar de qualquer atividade de jogo.</p>
         </div>
     </footer>
 
