--- a/gerar-sinais.html
+++ b/gerar-sinais.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FP - GERADOR DE SINAIS</title>
+    <title>CASAL VIP - GERADOR DE SINAIS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -234,7 +234,7 @@
             <h1 style="color: var(--text-gold); margin-top: 30px;">ESCOLHA SEU JOGO PARA SINAL</h1>
             <div id="game-cards-container" class="cards-grid">
                 </div>
-            <p style="margin-top: 40px; font-size: 0.9em; color: rgba(255, 255, 255, 0.7);">Os sinais são válidos apenas para as casas parceiras do Grupo FP.</p>
+            <p style="margin-top: 40px; font-size: 0.9em; color: rgba(255, 255, 255, 0.7);">Os sinais são válidos apenas para as casas parceiras do Grupo Casal Vip.</p>
         </section>
 
         <section id="signal-screen">
